fixing the size of <li> elements (#4)
* extend examples/README to test tables

* tentative fix for <li> elements that are too small

--- a/packages/application/style/base.css
+++ b/packages/application/style/base.css
@@ -175,6 +175,7 @@
 }
 
 .rise-enabled .jp-RenderedHTMLCommon p,
+.rise-enabled .jp-RenderedHTMLCommon li,
 .rise-enabled i {
   font-size: 2.25rem;
 }
